SearchBar -> fix overflow on search button

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -9,5 +9,9 @@
     width: 80%;
 }
 .search-bar > button {
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+
     width: 20%;
 }
